--- a/securecoding/src/main/resources/templates/1/1.9.html
+++ b/securecoding/src/main/resources/templates/1/1.9.html
@@ -24,7 +24,7 @@
             <br />
             <div class="card h-100">
               <!-- Vulnerable code -->
-              <textarea readonly class="area" th:text="${result}"></textarea>
+              <textarea readonly class="area" th:text="${value}"></textarea>
             </div>
           </form>
       </div>
@@ -38,7 +38,7 @@
             <br />
             <div class="card h-100">
               <!-- Secure Code -->
-              <textarea readonly class="area" th:text="${result2}"></textarea>
+              <textarea readonly class="area" th:text="${value2}"></textarea>
             </div>
           </form>
       </div>
