--- a/securecoding/src/main/resources/templates/1/1.17.html
+++ b/securecoding/src/main/resources/templates/1/1.17.html
@@ -22,7 +22,7 @@
                   <div class="tabs">
                       <div class="tab">
                           <input type="radio" name="css-tabs" id="tab-1" checked class="tab-switch">
-                          <label for="tab-1" class="tab-label">FormatString.java</label>
+                          <label for="tab-1" class="tab-label">formatString.java</label>
                           <div class="tab-content">
                               <code class="code-area" style="height: 15em"><textarea disabled class="area" style="height: 15em">public class formatString {
 
@@ -39,15 +39,11 @@
                           <input type="radio" name="css-tabs" id="tab-2" class="tab-switch">
                           <label for="tab-2" class="tab-label">실행 결과</label>
                           <div class="tab-content">
-                              <code class="code-area" style="height: 15em"><textarea disabled class="area" style="height: 15em">public class formatString {
+                              <code class="code-area" style="height: 15em"><textarea disabled class="area" style="height: 15em">// 포맷 문자열을 포함하여 파일을 실행하였을 때
+>> java formatString.java %tY
 
-    public static void main(String[] args) {
-        Calendar validDate = Calendar.getInstance();
-        validDate.set(2022, Calendar.OCTOBER, 29);
-
-        System.out.printf(args[0] + " did not match! HINT: It was issued on %1$terd of some month", validDate);
-    }
-}</textarea></code>
+// 실행 결과
+2022 did not match! HINT: It was issued on 29rd of some month% </textarea></code>
                           </div>
                       </div>
                   </div>
@@ -64,7 +60,7 @@
                   <div class="tabs">
                       <div class="tab">
                           <input type="radio" name="css-tabs" id="tab-3" checked class="tab-switch">
-                          <label for="tab-3" class="tab-label">FormatString.java</label>
+                          <label for="tab-3" class="tab-label">formatString.java</label>
                           <div class="tab-content">
                               <code class="code-area" style="height: 15em"><textarea disabled class="area" style="height: 15em">public class formatString {
 
@@ -81,15 +77,11 @@
                           <input type="radio" name="css-tabs" id="tab-4" class="tab-switch">
                           <label for="tab-4" class="tab-label">실행 결과</label>
                           <div class="tab-content">
-                              <code class="code-area" style="height: 15em"><textarea disabled class="area" style="height: 15em">public class formatString {
-
-    public static void main(String[] args) {
-        Calendar validDate = Calendar.getInstance();
-        validDate.set(2022, Calendar.OCTOBER, 29);
-
-        System.out.printf(args[0] + " did not match! HINT: It was issued on %1$terd of some month", validDate);
-    }
-}</textarea></code>
+                              <code class="code-area" style="height: 15em"><textarea disabled class="area" style="height: 15em">// 포맷 문자열을 포함하여 파일을 실행하였을 때
+java formatString.java %tY
+                                  
+// 실행 결과
+%tY did not match! HINT: It was issued on 29rd of some month% </textarea></code>
                           </div>
                       </div>
                   </div>
