--- a/securecoding/src/main/resources/templates/fragments/nav.html
+++ b/securecoding/src/main/resources/templates/fragments/nav.html
@@ -46,7 +46,7 @@
               <li><a class="dropdown-item" th:href="@{/2/12}">12. 사용자 하드디스크에 저장되는 쿠키를 통한 정보노출</a></li>
               <li><a class="dropdown-item" th:href="@{/2/13}">13. 주석문 안에 포함된 시스템 주요정보</a></li>
               <li><a class="dropdown-item" th:href="@{/2/14}">14. 솔트 없이 일방향 해쉬함수 사용</a></li>
-              <li><a class="dropdown-item" href="#!">15. 무결성 검사 없는 코드 다운로드</a></li>
+              <li><a class="dropdown-item" th:href="@{/2/15}">15. 무결성 검사 없는 코드 다운로드</a></li>
               <li><a class="dropdown-item" th:href="@{/2/16}">16. 반복된 인증시도 제한 기능 부재</a></li>
             </ul>
           </li>
