--- a/securecoding/src/main/resources/templates/1/1.8.html
+++ b/securecoding/src/main/resources/templates/1/1.8.html
@@ -17,8 +17,8 @@
       <div class="col mb-5" style="width: 40%; height: 200%">
         <h4 class="fw-bolder" style="text-align: center">Vulnerable</h4>
         <hr />
-          <form action="/1/8/vuln" id="vulnerable8" method="post">
-            <input type="text" id="filePath" name="filePath" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
+          <form action="/1/8/vuln" method="post">
+            <input type="text" id="filepath" name="filepath" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
             <button type="submit" id="execute" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
@@ -31,8 +31,8 @@
       <div class="col mb-5" style="width: 40%; height: 200%">
         <h4 class="fw-bolder" style="text-align: center">Secure</h4>
         <hr />
-          <form action="/1/8/secure" id="secure8" method="post">
-            <input type="text" id="filePath2" name="filePath2" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
+          <form action="/1/8/secure" method="post">
+            <input type="text" id="filepath2" name="filepath2" class="form-control" style="width: 80%; margin-right: 4%; height: 50px; float: left" />
             <button type="submit" class="btn" style="background-color: #ffe74a; width: 16%; height: 50px">실행</button>
             <br />
             <br />
@@ -44,7 +44,7 @@
       </div>
     </div>
     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 74%" href="#">코드 보기</a></div>
+      <div class="text-center"><a class="btn btn-outline-dark mt-auto" style="margin-left: 75%" th:href="@{/1/8/code}">코드 보기</a></div>
     </div>
   </div>
 </section>
