--- a/securecoding/src/main/resources/templates/1/1.6.html
+++ b/securecoding/src/main/resources/templates/1/1.6.html
@@ -6,12 +6,10 @@
 <body>
 <!-- Navigation -->
 <nav th:replace="fragments/nav :: nav"></nav>
-<!-- Header-->
-<head th:replace="fragments/header :: header"></head>
 <!-- Section -->
 <section class="py-5">
   <div class="container px-4 px-lg-5 mt-5">
-    <h4 class="fw-bolder" style="text-align: center">6. 위험한 형식 파일 업로드</h4>
+    <h3 class="fw-bolder" style="text-align: center">6. 위험한 형식 파일 업로드</h3>
     <p style="text-align: center">제1절 입력데이터 검증 및 표현</p>
     <br />
     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
@@ -22,22 +20,17 @@
         <form action="/1/6/vuln" method="post" th:object="${form}" enctype="multipart/form-data">
           <div class="form-group">
             <label th:for="subject" style="margin-bottom: 2%; color: #2E2E2E;">제목</label>
-            <input type="text" th:field="*{subject}" class="form-control" style="margin-bottom: 2%; height: 45px" />
+            <input type="text" th:field="*{subject}" class="form-control" style="height: 45px" />
           </div>
           <div class="form-group">
             <label th:for="content" style="margin-top: 3%; margin-bottom: 2%; color: #2E2E2E">내용</label>
-            <textarea th:field="*{content}" class="form-control" style="height: 250px; margin-bottom: 2%; border-color: #D8D8D8; background-color: #FFF"/>
+            <textarea th:field="*{content}" class="form-control" style="height: 250px; border-color: #D8D8D8; background-color: #FFF; resize: none"/>
           </div>
-          <div class="filebox">
-            <input class="upload-name" value="첨부파일" readonly placeholder="첨부파일" style="margin-bottom: 2%">
-            <label th:for="file" style="margin-bottom: 2%; color: #2E2E2E; line-height: 45px; color: #fff;">파일 찾기</label>
-            <input id="file" name="file" type="file" style="margin-bottom: 2%; float: left"/>
-            <script>
-            $("#file").on('click',function(){
-                var fileName = $("#file").val();
-                $(".upload-name").val(fileName);
-            });
-            </script>
+          <div class="form-group">
+<!--            <input class="upload-name" value="첨부파일" readonly placeholder="첨부파일" style="margin-bottom: 2%">-->
+<!--            <label th:for="file" style="margin-bottom: 2%; color: #2E2E2E; line-height: 45px; color: #fff;">파일 찾기</label>-->
+            <label th:for="content" style="margin-top: 3%; margin-bottom: 2%; color: #2E2E2E">파일</label>
+            <input id="file" name="file" class="form-control" type="file" style="margin-bottom: 5%; float: left"/>
           </div>
           <button type="submit" class="btn" style="background-color: #ffe74a; width: 100%; height: 50px">등록</button>
           <br />
@@ -53,16 +46,17 @@
         <form action="/1/6/secure" method="post" th:object="${form}" enctype="multipart/form-data">
             <div class="form-group">
                 <label th:for="subject" style="margin-bottom: 2%; color: #2E2E2E">제목</label>
-                <input type="text" th:field="*{subject}" class="form-control" style="margin-bottom: 2%; height: 45px" />
+                <input type="text" th:field="*{subject}" class="form-control" style="height: 45px" />
             </div>
             <div class="form-group">
                 <label th:for="content" style="margin-top: 3%; margin-bottom: 2%; color: #2E2E2E">내용</label>
-                <textarea th:field="*{content}" class="form-control" style="height: 250px; margin-bottom: 2%; border-color: #D8D8D8; background-color: #FFF"/>
+                <textarea th:field="*{content}" class="form-control" style="height: 250px; border-color: #D8D8D8; background-color: #FFF; resize: none"/>
             </div>
-            <div class="filebox">
-                <input class="upload-name" value="첨부파일" placeholder="첨부파일" readonly style="margin-bottom: 2%;">
-                <label th:for="file2" style="margin-bottom: 2%; color: #2E2E2E; line-height: 45px; color: #fff">파일 찾기</label>
-                <input id="file2" name="file" type="file" style="margin-bottom: 2%; float: left;"/>
+            <div class="form-group">
+<!--                <input class="upload-name" value="첨부파일" placeholder="첨부파일" readonly style="margin-bottom: 2%;">-->
+<!--                <label th:for="file2" style="margin-bottom: 2%; color: #2E2E2E; line-height: 45px; color: #fff">파일 찾기</label>-->
+                <label th:for="file2" style="margin-top: 3%; margin-bottom: 2%; color: #2E2E2E">파일</label>
+                <input id="file2" name="file" type="file" class="form-control" style="margin-bottom: 5%; float: left;"/>
             </div>
             <script>
             $("#file2").on('click',function(){
