--- a/securecoding/src/main/resources/templates/4/4.1.html
+++ b/securecoding/src/main/resources/templates/4/4.1.html
@@ -5,12 +5,10 @@
 <body>
 <!-- Navigation-->
 <nav th:replace="fragments/nav :: nav"></nav>
-<!-- Header-->
-<head th:replace="fragments/header :: header"></head>
 <!-- Section-->
 <section class="py-5">
   <div class="container px-4 px-lg-5 mt-5">
-    <h4 class="fw-bolder" style="text-align: center">1. 오류 메시지 정보노출</h4>
+    <h3 class="fw-bolder" style="text-align: center">1. 오류 메시지 정보노출</h3>
     <p style="text-align: center">제4절 에러처리</p>
     <br />
     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
@@ -68,6 +66,7 @@ public class MemberService {
 
     public Long join(Member member) {
 
+        // 이미 존재하는 아이디로 회원가입을 시도할 경우
         if(validateDuplicateMember(member.getUsername())) {
             throw new NotJoinException("중복된 아이디입니다.");
         } else {
