--- a/securecoding/src/main/resources/templates/2/2.14.code.html
+++ b/securecoding/src/main/resources/templates/2/2.14.code.html
@@ -5,12 +5,10 @@
 <body>
 <!-- Navigation-->
 <nav th:replace="fragments/nav :: nav"></nav>
-<!-- Header-->
-<head th:replace="fragments/header :: header"></head>
 <!-- Section-->
 <section class="py-5">
   <div class="container px-4 px-lg-5 mt-5">
-    <h4 class="fw-bolder" style="text-align: center">14. 솔트 없이 일방향 해쉬함수 사용</h4>
+    <h3 class="fw-bolder" style="text-align: center">14. 솔트 없이 일방향 해쉬함수 사용</h3>
     <p style="text-align: center">제2절 보안기능</p>
     <br />
     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
@@ -47,7 +45,8 @@ public String HashForm_vuln(HttpServletRequest request, Model model) throws Unsu
                             <div class="tab-content">
                                 <code class="code-area" style="height: 15em"><textarea wrap="off" disabled class="area" style="height: 15em">@Service
 @RequiredArgsConstructor
-public class AuthorityService {public static String NonSaltService(String plainText) throws NoSuchAlgorithmException, UnsupportedEncodingException {
+public class AuthorityService {
+    public static String NonSaltService(String plainText) throws NoSuchAlgorithmException, UnsupportedEncodingException {
 
         MessageDigest messageDigest = MessageDigest.getInstance("SHA-256");
         byte[] hash = messageDigest.digest(plainText.getBytes("UTF-8"));
@@ -59,7 +58,6 @@ public class AuthorityService {public static String NonSaltService(String plainT
                 hexString.append('0');
             hexString.append(hex);
         }
-
         return hexString.toString();
     }
 }</textarea></code>
